Partial cleanup of convertors
Migrate away from unit/lists and refactor the code for clarity and
speed.

Change-Id: I142b49de0908fef3c014a516058e9ffe13c998e0
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>